mule-user-guide/v/3.5/microsoft-sharepoint-2013-connector.adoc
=  Microsoft SharePoint 2013连接器

Microsoft SharePoint是用于内容和文档管理，Intranet门户，协作，外联网，网站和企业搜索的Web应用程序平台。有关更多信息，请参阅[Microsoft SharePoint 2013连接器发行说明]。

Anypoint平台的Microsoft SharePoint连接器通过其REST API实现与SharePoint 2013的集成。

请参阅[demo.zip]演示项目。

== 概述

支持的操作：

*  *Lists and List Items API*：创建，删除，检索和更新列表和列表项。
*  *Files and Folders API*：
**  *Files*：添加，检索内容，检索元数据，删除，签出，撤消签出，签入，发布，取消发布，批准，拒绝，回收和复制。
**  *Folders*：创建，删除和检索。

支持的Microsoft SharePoint版本：

*  Microsoft SharePoint 2013
*  Microsoft SharePoint Online

== 认证

Microsoft SharePoint连接器支持基于所访问的Microsoft SharePoint的不同身份验证方案。

内部支持的Microsoft SharePoint身份验证：

*  NTLM
* 基于声明的身份验证
* 不支持的身份验证：Kerberos

在线支持Microsoft SharePoint身份验证：
*  Microsoft Online（Office 365）管理用户
*  Microsoft Online（Office 365）将用户与Microsoft ADFS联合使用

== 安装和配置

安装：

. 在Anypoint Studio中，点击*Help > Install New Software*。
. 在*Work with*下拉列表中，点击`Anypoint Connectors Update Site`。
. 展开*Standard*并点击*Microsoft SharePoint Connector*。
. 点击左侧的复选框，选择要安装的SharePoint连接器，然后点击*Next*。
. 查看您选择的项目的详细信息，然后点击*Next*。
. 选择*I accept the terms of the license agreement*，然后点击*Finish*。
. 点击*Restart Now*完成安装。

Studio重新启动后，展开“云连接器”选项板组以查看最近添加的SharePoint连接器。

== 配置您的第一个流程

配置：

. 在Anypoint Studio中，点击*File > New > Mule Project*。
. 指定一个*Project Name*并点击*Finish*。
. 点击*Global Elements*标签。
. 点击*Create*。
. 在搜索文本框中，键入*sharepoint*。
. 点击*Microsoft SharePoint*，然后点击*OK*。
. 填写*Username*，*Password*和*Site URL*。
. 对于认证：
** 如果使用自签名SSL证书，并点击*Disable SSL certificate validation*复选框。
** 要与声明验证连接，请填写STS URL（安全令牌服务）和范围（依赖方标识符）。 STS URL必须指向STS的端点，该端点接受用户名和密码作为认证凭证并理解WS-Trust 1.3标准。端点必须在ADFS中启用（默认情况下启用）。
** 要连接NTLM身份验证，请填写*Domain*。
** 要连接到SharePoint Online，请将NTLM和声明输入留空。只需指定一个*Username*，*Password*和*Site UR* L即可。
. 点击*Test Connection*以确保连接正常工作：
+
image:SPGlobalElementProps.png[SPGlobalElementProps]

=== 创建Anypoint Studio流程

创建Anypoint Studio流程：

. 从Anypoint Studio中，点击*File > New > Mule Project*。
. 指定一个*Project Name*并点击*Finish*。
. 在搜索框中，键入*http*，然后将连接器部分的*HTTP Endpoint*拖到画布上。
. 在搜索框中，键入*sharepoint*，然后将一个*Microsoft SharePoint connector*实例拖到HTTP端点连接器旁边。
. 在搜索框中，键入*json*并在Microsoft SharePoint连接器旁边拖动一个*Object to JSON*转换器。
+
image:SPMuleFlow.png[SPMuleFlow]
. 双击HTTP端点。确保*Host*设置为*localhost*，*Port*设置为*8081*。将*Path*设置为*query*。
. 双击Microsoft SharePoint连接器并更新以下配置值：
.. 从连接器配置列表中，单击先前创建的*Microsoft SharePoint*配置。
.. 从“操作”列表中，单击*List Item Query*。
.. 从语言列表中，点击*DataSense Query Language*。
. 单击查询生成器：
.. 从类型列表中，点击*Documents*。
.. 从字段列表中，点击*ID*和*Title*。
.. 从订单方式，点击*Title*。
.. 从方向，点击*DESCENDING*。
+
image:MSSPQueryBuilder.png[MSSPQueryBuilder]

==== 运行流程

. 在包资源管理器中，右键单击sharepoint2013-demo并选择*Run As > Mule  Application*。
. 检查控制台以查看应用程序何时启动。如果没有发生错误，您应该看到以下消息：
+
[source, code, linenums]
----
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Started app 'sharepoint2013-demo'                        +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
----

. 打开Internet浏览器并访问http：// localhost：8081 / query
. 文档列表按降序标题排序，并以JSON格式返回（结果因SharePoint 2013实例而异）。
+
[source, code, linenums]
----
[{"__metadata":{"id":"Web/Lists(guid'2af685ae-5aec-4f60-b175-
54b21b6bd668')/Items(4)","uri":"https://ec2-54-200-49-206.us-west-
2.compute.amazonaws.com/_api/Web/Lists(guid'2af685ae-5aec-4f60-b175-
54b21b6bd668')/Items(4)","etag":"\"1\"","type":"SP.Data.Shared_x0020_Document
sItem"},"Id":4,"ID":4,"Title":"folder"}]
----

== 操作：列出和列出项目API

使用列表和列表项API可让您创建，检索，更新和删除SharePoint列表和列表项。

=== 创建，更新和删除列表项目

创建或更新项目时，请指定列表ID。指定ID后，DataSense将提取列表的元数据，而对象构建器会显示可以完成的每个字段：

[source, xml, linenums]
----
<sharepoint-2013:list-create config-ref="Sharepoint_2013" doc:name="Sharepoint 2013" baseTemplate="GENERIC_LIST" title="Title"> <sharepoint-2013:list ref="#[payload]"/> </sharepoint-2013:list-create>
----

或者在连接器本身中定义属性：

[source, xml, linenums]
----
<sharepoint-2013:list-create config-ref="Sharepoint_2013" doc:name="Sharepoint 2013" baseTemplate="GENERIC_LIST" title="Title"> <sharepoint-2013:list contentTypesEnabled="true" description="Description"/> </sharepoint-2013:list-create>
----

为了检索和删除列表，只有列表ID是必需的：

[source, xml, linenums]
----
<sharepoint-2013:list-delete config-ref="Sharepoint_2013" doc:name="Sharepoint 2013" listId="8e306633-c600-40ab-80db-80f57968c0a1" />
----

=== 创建，更新和删除列表项目

创建或更新项目时，请指定一个列表ID。 DataSense使用列表ID来获取列表的元数据。对象生成器提供您需要完成的字段。

image:MSSPObjectBuilder.png[MSSPObjectBuilder]

=== 查询列表项目

使用查询生成器：

在左侧面板上，出现每个未隐藏的列表。在右侧面板上，出现所选列表的字段。如果该字段为*Lookup Field*，则字段类型为`SharepointListReference`或`SharepointListMultiValueReference`。
+
image:SPQueryBuilder.png[SPQueryBuilder]

如果选择这些字段中的任何一个以便由查询返回，则根据*Retrieve full objects for reference fields*复选框的值，可以使用两种类型的返回对象：

*  *not checked*：包含参考对象ID和参考对象列表ID的摘要对象：
+
[source, code, linenums]
----
{
    "Title": "A title",
    "LookupFieldId": {
        "id": "1",
        "lookupListId": "aaaa-1111-bbbb-2222"
    },
    "MultiValueLookupFieldId": {
        "ids": [
            1,
            2,
            3
        ],
        "lookupListId": "cccc-3333-dddd-4444"
    }
}
----

稍后可以在另一个连接器中使用此对象来为每个组件检索引用的对象以及a：

image:MSSPListItemQuery.png[MSSPListItemQuery]

*  *checked*：检索完整的对象图。如果有循环，则汇总参考对象显示：
+
[source, code, linenums]
----
{
    "Title": "A title",
    "LookupFieldId": {
        "Title": "Another title",
        "Id": "1",
        "Property1": "A value"
    },
    "MultiValueLookupFieldId": [
        {
            "Title": "Another title",
            "Id": "1",
            "Property1": "A value"
        },
        {
            "Title": "Another title",
            "Id": "2",
            "Property1": "A value"
        }
    ]
}
----

示例*Query Text*：

image:SPExampleQText.png[SPExampleQText]

选中此选项可能会导致包含许多参考字段的大型项目列表需要很长时间才能检索。

=== 使用具有多个值的选择列类型

您可以配置选择列类型以允许多个值。 Studio中用于接受多个值的列的元数据如下所示：

image:SharePointChoiceMultiSelect.png[SharePointChoiceMultiSelect]

假设SharePoint中的目标列表有一个标题属性和一个名为ChoiceMultiSelect的多选列，它们接受值`"one"`，`"two"`或`"three"`，下面的groovy脚本构造了一个负载，选择`"one"`，`"three"`：

[source, code, linenums]
----
[Title: "foo", ChoiceMultiSelect: [results: ["one", "three"]]]
----

可以为多选列结果属性构造`List<string>`的任何语言都可以用于类似的效果。

== 操作：文件和文件夹API

使用文件和文件夹API，您可以创建，检索，更新和删除文件和文件夹，还可以检入，检出，发布，批准，拒绝，复制和回收文件列表中的文件。

使用文件夹操作时，服务器的相对URL指的是文件夹的位置或位置。该网址格式可以是`/site/docList/innerFolder`或`docList/innerFolder`格式。在第二种情况下，使用连接器的配置站点URL参数中指定的站点。

使用文件操作时，文件服务器相对URL指文件夹服务器相对URL加上文件名`/site/docList/innerFolder/filename`或`docList/innerFolder/filename`。

=== 创建和删除文件夹

您可以通过指定文件夹所在的服务器相对URL或您计划创建文件夹的位置来创建或删除文件夹。

结果流看起来：

[source, xml, linenums]
----
<sharepoint-2013:folder-create config-ref="Sharepoint_2013" url="/path/to/folder" doc:name="Sharepoint 2013"/>
 
<sharepoint-2013:folder-delete config-ref="Sharepoint_2013" url="/path/to/folder" doc:name="Sharepoint 2013"/>
----

=== 添加文件

可以通过选择物理文件或将输入流传递到连接器来上传文件，并将其上载到指定的服务器相关URL。例如，您可以将其与文件连接器一起用于将文件上传到列表。

使用输入流：

[source, xml, linenums]
----
<sharepoint-2013:file-add config-ref="Sharepoint_2013"
fileServerRelativeUrl="/path/to/folder/filename"
fileContentStream-ref="#[payload]" overwrite="true"
doc:name="Sharepoint 2013"/>
----

=== 获取文件内容

文件内容以字节数组的形式返回。例如，您可以将其用作文件连接器的输入以从列表中下载文件：

[source, xml, linenums]
----
<sharepoint-2013:file-get-content config-ref="Sharepoint_2013"
doc:name="Sharepoint 2013"
fileServerRelativeUrl="/path/to/folder/filename"/>
----

=== 查询文件和文件夹

此操作从指定的文件夹开始返回所有符合指定条件的文件和文件夹。

使用查询生成器：

* 在左侧面板上，出现SharePoint实例的文档列表。所选实例用作查询文件和文件夹的开始路径的一部分。
* 在右侧面板上，为每个文档列表显示相同的字段。
* 此外，您可以在文件夹路径输入中指定一个或多个内部文件夹，以用作起始路径。
* 选择递归复选框时，会在起始路径的每个文件夹中递归搜索文件和文件夹。

设置查询生成器选项：

image:SharePointFolderPath.png[SharePointFolderPath]

例：

[source, code, linenums]
----
sharepoint-2013:file-query config-ref="Sharepoint_2013" query="dsql:SELECT Author,ModifiedBy,Name,ServerRelativeUrl FROM #[header:inbound:documentListName]" recursive="true" doc:name="Sharepoint 2013"/>
 
<sharepoint-2013:folder-query config-ref="Sharepoint_2013" recursive="true" query="dsql:SELECT ItemCount,Name,ServerRelativeUrl FROM #[header:inbound:documentListName] WHERE ItemCount &gt; 0" doc:name="Sharepoint 2013"/>
----

=== 其他文件操作

批准，签入，签出，拒绝，发布，撤消签出和取消发布，都与使用非常相似。指定文件URL，并在某些情况下将其他评论作为参数传递。

[source, xml, linenums]
----
<sharepoint-2013:file-publish config-ref="Sharepoint_2013" 
doc:name="Sharepoint 2013" fileServerRelativeUrl="" comment=""/>
----

=== 设置文件元数据

您可以使用*Update List Item*操作获取并设置上传到文档库的文件的元数据。

要设置列表中文件的属性，您必须知道*List Item Id*。这可以使用延迟的*ListItemAllFields*属性进行检索。

以下流程说明了*File Add*如何直接链接到*Update List Item*操作以将文件上载到列表并在以下位置立即设置元数据：

[source, xml, linenums]
----
<flow name="sharepoint_demo_fileAddWithMetadata"
   doc:name="sharepoint_demo_fileAddWithMetadata">
   <http:inbound-endpoint exchange-pattern="request-response" host="localhost"
     port="8081" path="upload" doc:name="HTTP"/>
   <sharepoint:file-add config-ref="Sharepoint" 
     fileServerRelativeUrl="/Shared Documents/myfile.txt" 
     overwrite="true" 
     doc:name="Add file"/>
   <sharepoint:resolve-object config-ref="Sharepoint" 
     doc:name="Get ListItemId of File" 
     url="#[payload.listItemAllFields.__deferred.uri]"/>
   <sharepoint:list-item-update config-ref="Sharepoint" itemId="#[payload.Id]"
     listId="ccbfaf65-b53e-48ac-be19-adf45192ecc3" doc:name="Set file properties">
       <sharepoint:updated-properties>
           <sharepoint:updated-property key="Title">Test title</sharepoint:updated-property>
       </sharepoint:updated-properties>
   </sharepoint:list-item-update>
   <set-payload value="OK" doc:name="Set Payload"/>
</flow>
----


== 解决延期属性

出于性能原因，许多SharePoint操作会返回实体的基本数据集以及一个或多个可用于检索其他详细信息或相关对象的延迟属性引用。

您可以使用通用的*Resolve object*或*Resolve collection*操作来解决设置为单个`Map<string,object>`或`List<Map<string,object>>`的延迟属性，并访问流中的此信息。

例如，该技术可以获取SharePoint File对象的全部字段：

[source, xml, linenums]
----
<sharepoint:resolve-object config-ref="SharePoint" 
  url="#[payload.listItemAllFields.__deferred.url]" 
  doc:name="Microsoft SharePoint" >
</sharepoint:resolve-object>
----

使用Mule Debugger或Logger组件记录有效负载，可以使用`__deferred` URL属性标识属性。

== 异常处理

连接时发生=== 异常

如果连接器因任何原因无法与SharePoint实例连接，则会抛出ConnectionException类型的异常。

异常消息有助于调试异常的原因。

操作中的=== 异常

如果执行某个操作时发生错误，那么将引发一个SharepointException，并显示有关该错误的消息。

== 另请参阅

*  [Microsoft SharePoint 2013连接器发行说明]
*  [Mule表达语言（MEL）]
*  [配置端点]
*  [Studio Transformers]
*  [流程参考]

网络研讨会和与Mule ESB相关的其他文档可以在Resources菜单选项下找到。
